<resources>
    <string name="app_title" translatable="false">HKMG</string>
    <string name="app_about">About This App</string>
    <string name="app_aboutdes">This is an app developed by ShareLabTrust Team</string>
    <string name="app_name">Hong Kong Museum Guide</string>
    <string name="about_title">About HKMG:</string>
    <string name="about_des">This app is developed by ShareLabTrust Team.</string>
    <string name="hkmoh">Hong Kong Museum of History</string>
    <string name="hkhm">Hong Kong Heritage Museum</string>
    <string name="hksm">Hong Kong Science Museum</string>
    <string name="hkspace">Hong Kong Space Museum</string>
    <string name="about">About</string>
    <string name="audio_language">Audio Language</string>
    <string name="audio_language_sum">Change Audio Language</string>
    <string name="text_language">Text Language</string>
    <string name="text_language_sum">Change Text Language</string>
    <string name="font_size">Font Size</string>
    <string name="font_size_sum">Change Font Size</string>
    <string name="exit">Exit</string>
    <string name="app_Settings">Application Settings</string>
    <string name="setting">Setting</string>
    <string name="blueboothtest">BlueboothTest</string>

    <string name="hkmoh_addr">100 Chatham Road South, Tsim Sha Tsui, Kowloon, Hong Kong (next to the Hong Kong Science Museum)</string>
    <string name="hkmoh_tel">(852) 2724 9042</string>
    <string name="hkmoh_fax">(852) 2724 9090</string>
    <string name="hkmoh_email">hkmh@lcsd.gov.hk</string>
    <string name="hkmoh_website1">http://hk.history.museum</string>
    <string name="hkmoh_website2">http://www.lcsd.gov.hk/CE/Museum/History/</string>

    <string name="hkhm_addr">1 Man Lam Road, Sha Tin, Hong Kong.</string>
    <string name="hkhm_tel">2180 8188</string>
    <string name="hkhm_fax">2180 8111</string>
    <string name="hkhm_email">hkhm@lcsd.gov.hk</string>
    <string name="hkhm_website1">http://www.heritagemuseum.gov.hk</string>

    <string name="hksm_addr">2 Science Museum Road, Tsimshatsui East, Kowloon, Hong Kong.</string>
    <string name="hksm_tel">2732 3232</string>
    <string name="hksm_fax">2311 2248</string>
    <string name="hksm_email">enquiries@hk.science.museum</string>
    <string name="hksm_website1">http://hk.science.museum</string>

    <string name="hkspace_addr">10 Salisbury Road, Tsim Sha Tsui, Kowloon, Hong Kong.</string>
    <string name="hkspace_tel">2721 0226</string>
    <string name="hkspace_fax">2367 8320</string>
    <string name="hkspace_email">hkspm@lcsd.gov.hk</string>
    <string name="hkspace_website1">hk.space.museum/</string>

    <string name="address">Address</string>
    <string name="telephone">Telephone</string>
    <string name="fax">Fax</string>
    <string name="email">Email</string>
    <string name="website">Website</string>
    <string name="about_us">About us</string>
    <string name="visiting_information">Visiting Information</string>
    <string name="transport">Transport</string>
    <string name="exhibit">Exhibittion</string>
    <string name="editor_audio_language">audio language</string>
    <string name="editor_text_language">Text language</string>
    <string name="editor_text_language_default">English</string>
    <string name="display1_des">Text description of display1</string>
    <string name="display2_des">Text description of display2</string>
    <string name="display3_des">Text description of display3</string>
    <string name="display4_des">Text description of display4</string>
    <string name="display5_des">Text description of display5</string>
    <string name="display6_des">Text description of display6</string>
    <string name="display7_des">Text description of display7</string>
    <string name="display8_des">Text description of display8</string>
    <string name="display9_des">Text description of display9</string>
    <string name="display1">Display1</string>
    <string name="display2">Display2</string>
    <string name="display3">Display3</string>
    <string name="display4">Display4</string>
    <string name="display5">Display5</string>
    <string name="display6">Display6</string>
    <string name="display7">Display7</string>
    <string name="display8">Display8</string>
    <string name="display9">Display9</string>
    <string name="editor_font_size">Font Size</string>
    <string name="editor_font_size_default">English</string>
    <string name="editor_audio_language_default">English</string>
    <string name="voice_za">Putonghua Audio Intro</string>
    <string name="voice_zh">Cantonese Audio Intro</string>
    <string name="voice_en">English Audio Intro</string>
    <string name="zonea">You are now in Zone A</string>
    <string name="zoneb">You are now in Zone B</string>
    <string name="zonec">You are now in Zone C</string>
    <string name="ble_title">Your Indoor Map</string>
    <string name="hkmoh_about_us_message"> The Hong Kong Museum of History was established in July 1975 when the City Museum and Art Gallery was split into the Hong Kong Museum of History and Hong Kong Museum of Art. But some of the Museums collections date back to the City Museum and Art Gallery founded in 1962 at the City Hall. In 1983, the Museum was moved to the temporary accommodation in Kowloon Park. It was moved to its present premises on Chatham Road South, Tsim Sha Tsui in 1998. The permanent home of the Hong Kong Museum of History, with a gross floor area of 17,500 m2, is housed in a new building constructed at a cost of HK$390M and funded by the Hong Kong SAR Government. It is a comprehensive state-of-the-art museum designed by the P and T Architects and Engineers Ltd., based on the architectural concept of Mr E. Verner Johnson. The new Museum and the neighbouring Science Museum together form a museum complex of a harmonious appearance and colour scheme. Apart from the main museum at Chatham Road South, the Hong Kong Museum of History runs five branch museums, namely the Hong Kong Museum of Coastal Defence at Shau Kei Wan, the Lei Cheng Uk Han Tomb Museum at Sham Shui Po , Law Uk Folk Museum at Chai Wan, Fireboat Alexander Grantham Exhibition Gallery inside the Quarry Bay Park and Dr. Sun Yat-sen Museum at Mid-levels in Central.
    </string>
    <string name="hkhm_about_us_message"> Under the umbrella of the Leisure and Cultural Services Department, the Hong Kong Heritage Museum presents a unique mix of history, art and culture in a great variety of programmes that cater for the wide-ranging interests of the public.Designed both to entertain and to enlighten, our lively and informative exhibitions and activities offer a kaleidoscopic array of cultural and educational experiences for our visitors.Featuring an exhibition area of some 7,500 square metres, the museum houses five permanent galleries - the Jin Yong Gallery,  the Cantonese Opera Heritage Hall, the T.T. Tsui Gallery of Chinese Art, the Chao Shao-an Gallery and the Childrens Discovery Gallery - as well as six thematic galleries that regularly host exhibitions showcasing the diverse treasures of our heritage.As part of our mission is to reach out to the community and encourage public participation in museum activities, we publish a quarterly newsletter, produce teaching/learning kits and worksheets, organise seminars, school and theatre programmes on culture, history and art, put on activities for children and families and provide guided tours, with all of these resources specially designed so that visitors can get the most out of their visit to the museum.
    </string>
    <string name="hksm_about_us_message"> Since its opening in April 1991, the Hong Kong Science Museum has proven itself to be an ideal and unique place for learning science. Through presenting quality exhibitions and fun science programmes in an enjoyable environment, the Museum serves to popularize science to the public and support science education in schools. In contrast to traditional museums, visitors at the Science Museum are encouraged to explore exhibits in their own way and thus experience the fun of discovery learning.Occupying a permanent exhibition area of 6,500 square metres, the Museum houses over 500 exhibits. Nearly 70 percent of them are interactive and suitable for visitors of all ages. Among them, the most prominent exhibit is the largest device of its kind in the world: the Energy Machine. Another attraction is the DC-3 airplane which is the first local airliner and the first exhibit moved into the Museum building.The Museum also has a 745 sq.m. Special Exhibition Hall, a 295-seat Lecture Hall, a Classroom, a Computer Classroom, a Laboratory and a Resource Centre. Other ancillary facilities include a Gift Shop and a Book Shop.Apart from permanent exhibitions, the Museum regularly presents temporary exhibitions on a wide variety of topics related to science and modern technology. The Museum also organizes and develops a multitude of extension activities and educational programmes for the public.
    </string>
    <string name="hkspace_about_us_message"> Strategically located at the seaside of Tsim Sha Tsui, the Hong Kong Space Museum commenced its construction in 1977. Mr. Joseph Ming Gun LEE of the Public Works Department was the chief architect of the project. Hong Kong Space Museum was commissioned in October 1980. It is the first local planetarium for the popularisation of astronomy and space science. The unique egg-shaped dome renders the 8000-square-metre museum to be one of the most famous landmarks in Hong Kong.The Museum comprises two wings - east and west. The former, the planetariums nucleus, has an egg-shaped dome structure. Beneath it are the Stanley Ho Space Theatre, the Hall of Space Science, OMNIMAX projector room, workshops and offices. The west wing houses the Hall of Astronomy, the Lecture Hall, the Gift Shop, Resource Centre and offices.Inside the Stanley Ho Space Theatre, there is a hemispherical projection dome with a diameter of 23 metres. Boasting the first OMNIMAX film projector in the eastern hemisphere, the Museum is also the first planetarium in the world to possess a fully automatic control system at its Stanley Ho Space Theatre. Each year, the Museum produces Sky Show to be displayed using the digital planetarium projection system, and introduces the best foreign OMNIMAX films and 3D Dome Shows to Hong Kong.The Museum has two thematic exhibition halls: the Hall of Space Science and the Hall of Astronomy on the ground and first floors respectively. The exhibits, predominately interactive, enable visitors to learn through a series of entertaining and educational experiences.Last but not the least, the Museum organises plenty of extension activities each year, including Astronomy Carnival, Astronomy Happy Hours, fun science lab sessions, astronomy competitions, lectures and astronomy film shows, etc. You can also find a lot of information related to stargazing, basic astronomy, astronomical news and educational resources in the Museums homepage.

    </string>
    <string name="transport_title">Transport</string>
    <string name="button_title">Press here to get Location on Google Map</string>
    <string name="button_ble">Press to start finding where you are</string>
    <string name="button_ble_off">Press to stop finding location</string>

    <string name="startGuide_button">Start the Exhibition</string>
    <string name="exhibit_map">Museum Map</string>
</resources>
