<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- "Mark Favorite", should appear as action button if possible -->
    <item
        android:id="@+id/about"
        android:title="@string/about"
<<<<<<< HEAD
        app:showAsAction="never" />
    <item
        android:id="@+id/language"
        android:title="@string/language"
        app:showAsAction="never" />
=======
        app:showAsAction="never"/>

    <item
        android:id="@+id/language"
        android:title="@string/language"
        app:showAsAction="never"/>
    <item android:id="@+id/action_settings"
        android:title="@string/setting"
        app:showAsAction="never"/>
>>>>>>> origin/master
    <item
        android:id="@+id/exit"
        android:title="@string/exit"
        app:showAsAction="never" />
    <!-- Settings, should always be in the overflow -->
<<<<<<< HEAD
    <item
        android:id="@+id/action_settings"
        android:title="@string/setting"
        app:showAsAction="never" />

=======
>>>>>>> origin/master
</menu>