<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HKMOH_MainActivity"
    android:background="@drawable/demo1">
    <include layout="@layout/toolbar"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:layout_alignParentStart="true"
        android:weightSum="1">

        <Button
            android:text="@string/about_us"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/hkmoh_about_us_default"
            android:layout_weight="0.05"
            android:onClick="onClick"
            android:background="@color/white" />
        <Button
            android:text="@string/visiting_information"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/hkmoh_visiting_information"
            android:layout_weight="0.05"
            android:onClick="onClick"
            android:background="@color/white" />

        <Button
            android:text="@string/exhibit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/hkmoh_exhibit_default"
            android:background="@color/white"
            android:layout_weight="0.05" />

        <Button
            android:text="@string/transport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/hkmoh_transport_default"
            android:background="@color/white"
            android:layout_weight="0.05" />

    </LinearLayout>

</RelativeLayout>
