<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <include layout="@layout/toolbar"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:background="@color/background">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageButton
                android:id="@+id/button_hkmoh"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:clickable="true"
                android:elevation="4dp"
                android:onClick="onClick"
                android:padding="10dp"
                android:scaleType="fitXY"
                android:text="@string/hkmoh"
                app:srcCompat="@drawable/frontpage_hkmoh" />

            <ImageButton
                android:id="@+id/button_hkhm"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:elevation="4dp"
                android:padding="10dp"
                android:scaleType="fitXY"
                android:text="@string/hkhm"
                app:srcCompat="@drawable/frontpage_hkhm" />

            <ImageButton
                android:id="@+id/button_hksm"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:elevation="4dp"
                android:padding="10dp"
                android:scaleType="fitXY"
                android:text="@string/hksm"
                app:srcCompat="@drawable/frontpage_hksm" />

            <ImageButton
                android:id="@+id/button_hkspace"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_weight="1"
                android:elevation="4dp"
                android:padding="10dp"
                android:scaleType="fitXY"
                android:text="@string/hkspace"
                app:srcCompat="@drawable/frontpage_hkspacemuseum" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
