<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HKHM_MainActivity"
    android:background="@drawable/demo2">
    <include layout="@layout/toolbar"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:layout_alignParentStart="true"
        android:weightSum="1">

        <Button
            android:id="@+id/about_us"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.05"
            android:background="#66000000"
            android:onClick="onClick"
            android:text="@string/about_us"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:visibility="visible"
            android:layout_marginBottom="1dp"
            />

        <Button
            android:text="@string/exhibit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/exhibit"
            android:background="#66000000"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_weight="0.05"
            android:layout_marginBottom="1dp"
            />

        <Button
            android:text="@string/transport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/transport"
            android:background="#66000000"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_weight="0.05"
            android:layout_marginBottom="1dp"
            />

    </LinearLayout>

</RelativeLayout>
