<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@color/background"
            android:gravity="center"
            android:padding="10dp"
            android:text="Item Name"
            android:textAppearance="@android:style/TextAppearance.Material.Large.Inverse" />

        <ImageView
            android:id="@+id/exhitbi_image"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:adjustViewBounds="false" />

        <TextView
            android:id="@+id/des"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="Item text"
            android:textAppearance="@android:style/TextAppearance.Material.Medium" />

        <TableRow
            android:id="@+id/first_row"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dip">

            <Button
                android:id="@+id/zh"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="a"
                android:padding="15dip"
                android:text="@string/voice_zh"
                android:textAlignment="center"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/za"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="b"
                android:padding="15dip"
                android:text="@string/voice_za"
                android:textAlignment="center"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/en"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="c"
                android:padding="15dip"
                android:text="@string/voice_en"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="14sp" />
        </TableRow>
    </LinearLayout>

</LinearLayout>